--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
     <title>Cineplanet 15</title>
 </head>
 <body class="text-center">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav fixed-top">
+        <a class="navbar-brand" href="#">Cineplanet 15</a>
+        <button class="navbar-toggler" type="button"data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarMain">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Showtimes.html">Showtimes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Parties.html">Parties</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Contactus.html">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container-fluid h-100">
         <div id="coverrow" class="row h-100" >
             <div class="col my-auto mask d-flex justify-content-center align-items-center text-white">
